# word-frequency-counter

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .luacheckrc  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  c-build.sh  c-quality.sh  mingw-w64.cmake  wc_main.c  wc_test.c  wcx.c  wordcount.c  wordcount.h
.config/mise/: config.toml
benchmark/: bench.sh
c/include/: wordfreq.h
c/src/: main.c  wordfreq.c
cpp/src/: main.cpp
csharp/src/WordFrequencyCounter/: Program.cs  WordCounter.cs  WordFrequencyCounter.csproj
elixir/: mix.exs
elixir/lib/: word_count.ex
elixir/lib/word_count/: cli.ex
fixtures/: spec.txt
fortran/src/: main.f90
go/: .golangci.yml  go.mod
go/cmd/wordcount-go/: main.go
go/internal/wordcount/: wordcount.go
haskell/: word-frequency-counter-haskell.cabal
haskell/app/: Main.hs
javascript/: eslint.config.mjs  package.json  tsconfig.json
javascript/src/: wordcount.js
kotlin/: build.gradle.kts  gradle.lockfile  settings.gradle.kts
kotlin/gradle/: verification-metadata.xml
kotlin/src/main/kotlin/wordcount/: Main.kt
lua/src/: wordcount.lua
php/: composer.json  deptrac.yaml  phpcs.xml  phpmd.xml  phpstan.neon  psalm.xml  rector.php
php/src/: Cli.php  CliOptionValue.php  CliOptions.php  Entry.php  Result.php  WordCounter.php
rust/: Cargo.toml  clippy.toml  rustfmt.toml
rust/src/: lib.rs  main.rs
scripts/: bench.ts
spark/: alire.toml  gnat.adc  word_frequency_counter_spark.gpr
spark/src/: wordcount.adb  wordcount.ads  wordcount_ascii.adb  wordcount_ascii.ads  wordcount_checksum.adb  wordcount_checksum.ads  wordcount_spark.adb
zig/src/: main.zig
